tests: pm: Add a power domain test
Add simple test to exercise power domain behavior
with device runtime.

Signed-off-by: Flavio Ceolin <flavio.ceolin@intel.com>

--- a/drivers/power_domain/CMakeLists.txt
+++ b/drivers/power_domain/CMakeLists.txt
@@ -3,4 +3,5 @@
 
 zephyr_library()
 
+zephyr_library_sources_ifdef(CONFIG_PM_DEVICE_POWER_DOMAIN_DYNAMIC power_domain.c)
 zephyr_library_sources_ifdef(CONFIG_POWER_DOMAIN_GPIO power_domain_gpio.c)
