pm: device: Device constraints in DT
Add a way to devices list power states that they can't operate. The
power subsystem will automatically set / release constraints when the
device is active or suspended.

Signed-off-by: Flavio Ceolin <flavio.ceolin@intel.com>

--- a/dts/bindings/base/pm.yaml
+++ b/dts/bindings/base/pm.yaml
@@ -16,3 +16,12 @@ properties:
 
         Wake up capable devices are disabled (interruptions will not wake up
         the system) by default but they can be enabled at runtime if necessary.
+
+    wakeup-constraints:
+       type: phandles
+       required: false
+       description: |
+
+         List of power management states which the device can not operate as
+         wake up source. The pm subsystem will automatically set consraints
+         in these states when the device is used as wake up source.
