--- a/subsys/pm/Kconfig
+++ b/subsys/pm/Kconfig
@@ -63,6 +63,14 @@ config PM_DEVICE_POWER_DOMAIN
 	  devices that depend on a domain will be notified when this
 	  domain is suspended or resumed.
 
+config PM_DEVICE_POWER_DOMAIN_DYNAMIC
+	int "Enable dynamic binding device to a power domain"
+	depends on PM_DEVICE_POWER_DOMAIN
+	default 0
+	help
+    	  This option allows dinamically bind up to the given value
+    	  number of devices to a Power Domain.
+
 config PM_DEVICE_RUNTIME
 	bool "Runtime Device Power Management"
 	help
